--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/style.css">
+    {{{_sections.css}}}
     <title>Online Auction</title>
 </head>
 
@@ -36,20 +37,23 @@
                                 {{#each parentList}}
                                 <li class="nav-item dropend">
                                     <div class="btn-group">
-                                        <a class="nav-link" href="/product/cat/{{category_id}}" aria-expanded="false">
+                                        <a class="nav-link p-2" href="/product/cat/{{category_id}}" aria-expanded="false">
                                             {{category_name}}
                                         </a>
+                                        {{#if subCats}}
                                         <button type="button" class="btn dropdown-toggle dropdown-toggle-split"
                                             data-bs-toggle="dropdown" aria-expanded="false">
                                             <span class="visually-hidden">Toggle Dropdown</span>
                                         </button>
                                         <ul class="dropdown-menu">
                                             {{#each subCats}}
-                                            <li><a class="dropdown-item" href="/product/cat/{{category_id}}">{{category_name}}</a></li>
+                                            <li><a class="dropdown-item"
+                                                    href="/product/cat/{{category_id}}">{{category_name}}</a></li>
                                             {{/each}}
                                         </ul>
+                                        {{/if}}
                                     </div>
-                                </li>    
+                                </li>
                                 {{/each}}
                             </ul>
                         </li>
@@ -57,9 +61,16 @@
                     {{#if isAuthenticated}}
                     <ul class="navbar-nav me-2">
                         <li class="nav-item">
-                            <a class="nav-link text-nowrap" href="/logout">Log out</a>
+                            <div class="dropdown">
+                                <i class="bi bi-person-circle fs-3" type="button"
+                                data-bs-toggle="dropdown" aria-expanded="false"></i>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Xem profile</a></li>
+                                    <li><a class="dropdown-item" href="/logout">Đăng xuất</a></li>
+                                </ul>
+                            </div>
                         </li>
-                    </ul>   
+                    </ul>
                     {{else}}
                     <ul class="navbar-nav me-2">
                         <li class="nav-item">
@@ -69,7 +80,8 @@
                     {{/if}}
                 </div>
                 <form class="d-flex" role="search" action="/product/results">
-                    <input class="form-control me-2" type="search" placeholder="Tìm sản phẩm" aria-label="Search" name="item" />
+                    <input class="form-control me-2" type="search" placeholder="Tìm sản phẩm" aria-label="Search"
+                        name="item" />
                     <button class="btn btn-primary text-nowrap" type="submit">Tìm Kiếm</button>
                 </form>
             </div>
