--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,7 +65,7 @@
                                 <i class="bi bi-person-circle fs-3" type="button"
                                 data-bs-toggle="dropdown" aria-expanded="false"></i>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Xem profile</a></li>
+                                    <li><a class="dropdown-item" href="/account/profile">Xem profile</a></li>
                                     <li><a class="dropdown-item" href="/logout">Đăng xuất</a></li>
                                 </ul>
                             </div>
